[gd_scene load_steps=5 format=3 uid="uid://bs6amnx2lvmbh"]

[ext_resource type="Script" path="res://Tasks/Editor/TaskEditor/TaskEditor.gd" id="1_xe5rw"]
[ext_resource type="Resource" uid="uid://buy3x7tr70j0y" path="res://Tasks/Definitions/MoveTo.tres" id="2_l7ddv"]
[ext_resource type="PackedScene" uid="uid://b2gak6oxix4gp" path="res://UI/DragDrop/DropZone.tscn" id="3_44raf"]
[ext_resource type="Script" path="res://Tasks/Editor/TaskEditor/ChildrenPanel.gd" id="3_ni5i8"]

[node name="TaskEditor" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 47.0
grow_horizontal = 2
script = ExtResource("1_xe5rw")
task = ExtResource("2_l7ddv")

[node name="DropZoneHead" parent="." instance=ExtResource("3_44raf")]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="Label" parent="Header"]
layout_mode = 2
text = "Move To"

[node name="Parameters" type="HBoxContainer" parent="Header"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Children" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
script = ExtResource("3_ni5i8")

[node name="DropZoneFoot" parent="." instance=ExtResource("3_44raf")]
layout_mode = 2
